deploy/k8s/counter-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: counter-deployment
  labels:
    app: counter
    version: v0.0.1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: counter
  template:
    metadata:
      labels:
        app: counter
        version: v0.0.1
    spec:
      containers:
      - name: counter
        image: jessynt/counter:v0.0.1
        ports:
        - containerPort: 8080
