deploy/k8s/counter-service.yml
apiVersion: v1
kind: Service
metadata:
  name: counter-service
  labels:
    app: counter
    version: v0.0.1
spec:
  selector:
    app: counter
    version: v0.0.1
  type: NodePort
  ports:
  - protocol: TCP
    port: 8080
